# dcc2cvh

./: .gitignore  Dockerfile  Dockerfile.api  Dockerfile.mongodb  Makefile  README.md  pyproject.toml
materialize/: Cargo.toml
materialize/src/: main.rs
scripts/: create-indexes.js  create-view.js
src/cfdb/: cli.py  downloader.py  models.py
src/cfdb/api/: __init__.py  main.py
src/cfdb/api/gql/: schema.py  types.py
src/cfdb/api/routers/: data.py  sync.py
src/cfdb/services/: drs.py  hubmap.py  locks.py  sync.py
src/dcc2cvh/: cli.py  dcc_registry.py  downloader.py  models.py  schema.py
src/dcc2cvh/api/: main.py
src/dcc2cvh/api/gql/: __init__.py  schema.py  types.py
src/dcc2cvh/api/routers/: data.py
src/dcc2cvh/c2m2/: cvh_schema.py
src/dcc2cvh/cvh/: __init__.py  models.py
src/dcc2cvh/cvh/api/: __init__.py  main.py
src/dcc2cvh/cvh/api/gql/: types.py
src/dcc2cvh/cvh/api/routers/: data.py
src/dcc2cvh/cvh/services/: drs.py  globus.py  hubmap.py
src/dcc2cvh/services/: drs.py
