[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "setuptools-scm>=8"]

[project]
authors = [{ name = "Conrad Bzura", email = "conradbzura@gmail.com" }]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["aiohttp", "click", "pymongo", "wool"]
description = "A Python utility for parsing and normalizing various DCC datapackages."
dynamic = ["version"]
license = { text = "MIT License" }
name = "dcc2cvh"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"

[project.scripts]
dcc2cvh = "dcc2cvh.cli:cli"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = "src"

[tool.setuptools_scm]
local_scheme = "dirty-tag"
version_scheme = "release-branch-semver"
