[package]
name = "materialize"
version = "0.1.0"
edition = "2021"

[dependencies]
mongodb = { version = "3", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bson = { version = "2", features = ["chrono-0_4"] }
rayon = "1"
indicatif = "0.17"
anyhow = "1"

[profile.release]
lto = true
codegen-units = 1
